# slidet

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO  install-hook.sh
.github/workflows/: ci.yml  release.yml
docs/: dashboard.md  index.md
docs/drafts/: _template.md
docs/issues/: _template.md
docs/lessons/: index.md  ratatui-link-rendering.md  unified-markdown-pipeline.md
docs/modules/: app.md  image.md  index.md  loader.md  markdown-pipeline.md  markdown.md  ui.md  watcher.md
docs/procs/: _template.md
docs/quality/: codebase-review.md  index.md
docs/references/: image-rendering-terminal-compat.md  index.md  standard_markdown_ref.md
docs/rules/: _template.md
docs/sops/: _template.md
examples/: vibe_basic.md  vibe_basic_1.md
examples/01-text-lecture/: 01-why-slidet.md  02-how-to-read.md  03-wrap-up.md
examples/02-image-demo/: 01-cover.md  02-terminal-flow.md  03-fallback-path.md
examples/03-engineering-notes/: 01-scope.md  02-design.md  03-checklist.md
examples/04-markdown-regression/: 01-text-density.md  02-structured-content.md  03-image-and-fallback.md
examples/05-parser-edge-cases/: 01-inline-mix.md  02-long-scroll.md  03-rule-quote-list.md  04-links-and-tasks.md
examples/06-slide-navigation-story/: 01-cover.md  02-problem.md  03-walkthrough.md  04-wrap-up.md
examples/intro/: 0.md  1.md  2.md  3.md
scripts/: fm.sh  fm_test.sh  init-proc.sh  install.sh  next-steps.sh  rebuild-indexes.sh  test-scan.sh
src/: app.rs  image.rs  lib.rs  loader.rs  main.rs  markdown.rs  ui.rs  watcher.rs
(+146 files in other folders)
